# pako-tts-engines

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-arm.yml  docker.yml
.specify/memory/: constitution.md
specs/001-tts-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tts-api/checklists/: requirements.md
specs/001-tts-api/contracts/: openapi.yaml
src/app/: __init__.py  config.py  main.py
src/app/api/: __init__.py  routes.py
src/app/api/handlers/: __init__.py  health.py  models.py  openapi.py  tts.py
src/app/api/middleware/: error.py  logging.py
src/app/engines/: __init__.py  base.py  coqui.py  registry.py  silero.py
src/app/models/: config.py  engine.py  errors.py  request.py  response.py
src/app/services/: __init__.py  language_detector.py  queue.py  synthesis.py
tests/: __init__.py  conftest.py  test_main.py
tests/contract/: test_api.py
tests/integration/: test_synthesis.py
tests/unit/: test_config.py  test_engines.py  test_language_detector.py
